--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ text-align: center;
 font-size: 30px;
 }  
 
+/* example 1 */
 .item2 {
   grid-column: 3/4;
 }
@@ -76,6 +77,19 @@ font-size: 30px;
 .item5{
   grid-column: 3/4;
 }
+
+
+/* EXAMPLE 2 */
+.item_a{
+	grid-column-start: 3;
+	grid-row-start: 3;
+
+}
+.item_b{
+	grid-column-start: 3;
+
+}
+
 
 
 /* Go back to the parent container and play with ...*/
